# llm_chat_classifier

./: .gitignore  pyproject.toml  readme.md  similar_chats.html  similar_chats.ipynb
classes/: OpenaiConnector.py  QuerySimilaritySearch.py
prompts/: assistant_message.txt  chat_relevance.txt  similar_queries.txt
